tests/snapshots/element__it_can_parse_script_with_content.snap
---
source: tests/element.rs
expression: ast
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "element": {
        "name": "script",
        "variant": "void",
        "attributes": {},
        "nodes": [
          {
            "text": "const person_creator = ({ name, symtoms }) => {\n        let person = {}\n        person.name = name\n        person.symtoms = {}\n        for (symtom of symtoms) {\n            person.symtoms[symtom] = true\n        }\n        return person\n    }\n    \n    const main = () => {\n        let name = 'mathias'\n        let symtoms = ['Dunning-Kruger', 'ACDC', 'Slacker']\n    \n        setTimeout(() => {\n            let person = person_creator({ name, symtoms })\n            if (person.symtoms.hasOwnProperty('Dunning-Kruger')) {\n                console.log('yeah buddy, that\\'s right')\n            }\n        }, 1337)\n    }\n    \n    main()"
          }
        ]
      }
    }
  ]
}
