tests/snapshots/element__it_can_parse_style_with_content.snap
---
source: tests/element.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "nodes": [
    {
      "name": "style",
      "variant": "void",
      "nodes": [
        ":root {\n        --background-color: black;\n        --text-color: white;\n    }\n    body {\n        background: var(--background-color);\n        color: var(--text-color);\n    }"
      ]
    }
  ]
}
