tests/snapshots/element__it_errors_when_multiple_nested_elements_dont_match.snap
---
source: tests/element.rs
expression: dom
---
{
  "treeType": "documentFragment",
  "children": [
    "<div>",
    {
      "name": "div",
      "variant": "normal",
      "children": [
        {
          "name": "div",
          "variant": "normal",
          "children": [
            {
              "name": "div",
              "variant": "normal"
            }
          ]
        }
      ]
    }
  ]
}
