tests/snapshots/element__it_skips_dangling_elements.snap
---
source: tests/element.rs
expression: ast
---
Ast {
    tree_type: DocumentFragment,
    nodes: [
        Element(
            Element {
                name: "div",
                variant: Normal,
                attributes: {
                    "id": Some(
                        "123",
                    ),
                },
                nodes: [],
            },
        ),
        Element(
            Element {
                name: "div",
                variant: Normal,
                attributes: {
                    "id": Some(
                        "321",
                    ),
                },
                nodes: [],
            },
        ),
    ],
}
